adjust z-index for results headline and bo back button to ensure they stay on top of all other divs

--- a/src/styles/less/FaceoffReveal.less
+++ b/src/styles/less/FaceoffReveal.less
@@ -3,7 +3,7 @@
   padding: 0;
   margin-top: 0;
   box-sizing: border-box;
-  border: 1px solid purple;
+  // border: 1px solid purple;
 }
 
 html,
@@ -36,7 +36,7 @@ h1 {
   justify-content: center;
   position: relative;
   // height: 100%;
-  border: 1px solid orange;
+  // border: 1px solid orange;
 }
 
 .move-left-move-right {
@@ -92,6 +92,14 @@ h1 {
 
 .winner-headline {
   font-size: 3rem;
+}
+
+.resultsType {
+  z-index: 4;
+}
+
+.go-back-button {
+  z-index: 5;
 }
 
 @media only screen and (min-width: 601px) {
